# ugram

./: .gitignore  README.md  alembic-autogenerate.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: abbd7a993a30_create_user_group_message_tables.py
src/: app.py  db.py  lifespan.py  pytest.ini  run_dispatcher.py
src/auth/: deps.py  exceptions.py  handlers.py  router.py
src/auth/services/: bearer.py  forms.py  hash.py  request.py  session.py
src/cache/: connection.py  deps.py  lifespan.py
src/config/: config.py
src/dispatcher/: auth.py  connection.py  connection_manager.py  dispatcher.py  interface.py  receiver.py
src/dispatcher/dispatchers/: message_sent.py
src/dispatcher/puller/: kafka.py
src/forms/: group.py  message.py  user.py
src/group/: deps.py  handlers.py  router.py
src/group/services/: forms.py
src/message/: forms.py  handlers.py  router.py
src/message/services/: producer.py
src/models/: __init__.py  base.py  group.py  message.py  user.py
src/producer/: connection.py  deps.py
src/repository/: group.py  message.py  user.py
src/tests/: app.py  cache.py  conftest.py  db.py  test_db.py
src/tests/auth/: test_auth_handlers.py  test_auth_session.py
src/tests/dispatcher/: connection.py  test_connection_dispatcher.py  test_connection_manager.py  test_message_sent_dispatcher.py
src/tests/group/: test_group_handlers.py
src/tests/message/: test_message_handlers.py
src/tests/repository/: test_group.py  test_message.py  test_user.py
